# my117

./: Cargo.toml  README.md
117-pcm/: 0ji.s16le  10.s16le  10byo-wo.s16le  10fun.s16le  10ji.s16le  11ji.s16le  1fun.s16le  1ji.s16le  20.s16le  20byo-wo.s16le  20fun.s16le  2fun.s16le  2ji.s16le  30.s16le  30byo-wo.s16le  30fun.s16le  3fun.s16le  3ji.s16le  40.s16le  40byo-wo.s16le  40fun.s16le  4fun.s16le  4ji.s16le  50.s16le  50byo-wo.s16le  50fun.s16le  5fun.s16le  5ji.s16le  6fun.s16le  6ji.s16le  7fun.s16le  7ji.s16le  8fun.s16le  8ji.s16le  9fun.s16le  9ji.s16le  chodo-wo.s16le  gogo.s16le  gozen.s16le  oshiraseshimasu.s16le  (+1 more)
sounds/: byo.s16le  jiho.s16le  yoho.s16le
src/: lib.rs  sound.rs  time.rs  voice.rs
voices/: 0ji.s16le  10.s16le  10byo-wo.s16le  10fun.s16le  10ji.s16le  11ji.s16le  1fun.s16le  1ji.s16le  20.s16le  20byo-wo.s16le  20fun.s16le  2fun.s16le  2ji.s16le  30.s16le  30byo-wo.s16le  30fun.s16le  3fun.s16le  3ji.s16le  40.s16le  40byo-wo.s16le  40fun.s16le  4fun.s16le  4ji.s16le  50.s16le  50byo-wo.s16le  50fun.s16le  5fun.s16le  5ji.s16le  6fun.s16le  6ji.s16le  7fun.s16le  7ji.s16le  8fun.s16le  8ji.s16le  9fun.s16le  9ji.s16le  chodo-wo.s16le  gogo.s16le  gozen.s16le  oshiraseshimasu.s16le  (+1 more)
